--- a/_html/sass/components/_header.scss
+++ b/_html/sass/components/_header.scss
@@ -60,6 +60,7 @@ header {
         a.search {
           background: url('../img/svg/search.svg') no-repeat left 1px;
           background-size: 15px;
+          margin-right: 0;
         }
       }
     }
